--- a/ru/index.html
+++ b/ru/index.html
@@ -179,9 +179,9 @@ Map&lt;Method, DbTimer&gt; getTimers()</pre>
                 <h3>Транзакции</h3>
                 mJDBC предоставляет следующий механизм поддержки транзакций:
                 <ul class="spec-list">
-                    <li>Разработчик описывает и имплементирует Java интерфейс</li>
+                    <li>Разработчик описывает и имплементирует Java интерфейс.</li>
                     <li>mJDBC предоставляет свою прокси-имплементацию этого интерфейса, при вызове методов которого
-                        создаются транзакции и вызывается оригинальная имплементация
+                        создаются транзакции и вызывается оригинальная имплементация.
                     </li>
                     <li>Разработчик работает с proxy-имплементацией своего интерфейса.</li>
                 </ul>
@@ -194,7 +194,7 @@ Map&lt;Method, DbTimer&gt; getTimers()</pre>
                     Вызванный метод становится частью верхнеуровневой транзакции.
                 </p>
                 <p>
-                    Реализация транзакций mJDBC устроена так, что реальная транзакция, так же как и запрос соединения и <i>java.sql.DataSource</i> происходит не в момент вызова прокси-метода,
+                    Реализация транзакций mJDBC устроена так, что реальная транзакция, так же как и запрос соединения у <i>java.sql.DataSource</i> происходит не в момент вызова прокси-метода,
                     а при первом реальном исполнении SQL. Таким образом, вызовы которые не производят операций с базой, например, используют кэш или проверяют аргументы и
                     возвращают код ошибки, выполняются значительно быстрее.
                 </p>
